[gd_scene load_steps=7 format=3 uid="uid://cvhikdwff0tiv"]

[ext_resource type="Script" path="res://BlueRuneSize2.gd" id="1_yrfmv"]
[ext_resource type="PackedScene" uid="uid://cp0nbci8wt7o5" path="res://scenes/TileGeneration/BlueRuneSize2.tscn" id="2_jcqy4"]
[ext_resource type="PackedScene" uid="uid://bweung48y1tsk" path="res://scenes/red_rune_pillar.tscn" id="3_i6fd6"]
[ext_resource type="FontFile" uid="uid://ccejmh3hhfg44" path="res://assets/fonts/Fonts/Kenney Mini Square Mono.ttf" id="4_jkq8k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m7j4v"]
size = Vector2(251, 163)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_tgguc"]
vertices = PackedVector2Array(127, -1, -127, -1, -127, -194, 127, -194)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-128, 0, -128, -195, 128, -195, 128, 0)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 1.0

[node name="RedRuneSize2" type="Node2D"]
script = ExtResource("1_yrfmv")

[node name="TileMap" parent="." instance=ExtResource("2_jcqy4")]
position = Vector2(0, 0)
layer_1/tile_data = PackedInt32Array(-655367, 196608, 17, -589831, 196608, 17, -524295, 196608, 17, -458759, 196608, 17, -393223, 196608, 17, -327687, 196608, 17, -262151, 196608, 17, -196615, 196608, 17, -131079, 196608, 17, -65543, 196608, 17, -655366, 196608, 17, -589830, 196608, 17, -524294, 196608, 17, -458758, 196608, 17, -393222, 196608, 17, -327686, 196608, 17, -262150, 196608, 17, -196614, 196608, 17, -131078, 196608, 17, -65542, 196608, 17, -655365, 196608, 17, -589829, 196608, 17, -524293, 196608, 17, -458757, 196608, 17, -393221, 196608, 17, -327685, 196608, 17, -262149, 196608, 17, -196613, 196608, 17, -131077, 196608, 17, -65541, 196608, 17, -655364, 196608, 17, -589828, 196608, 17, -524292, 196608, 17, -458756, 196608, 17, -393220, 196608, 17, -327684, 196608, 17, -262148, 196608, 17, -196612, 196608, 17, -131076, 196608, 17, -65540, 196608, 17, -655363, 196608, 17, -589827, 196608, 17, -524291, 196608, 17, -458755, 196608, 17, -393219, 196608, 17, -327683, 196608, 17, -262147, 196608, 17, -196611, 196608, 17, -131075, 196608, 17, -65539, 196608, 17, -655362, 196608, 17, -589826, 196608, 17, -524290, 196608, 17, -458754, 196608, 17, -393218, 196608, 17, -327682, 196608, 17, -262146, 196608, 17, -196610, 196608, 17, -131074, 196608, 17, -65538, 196608, 17, -655361, 196608, 17, -589825, 196608, 17, -524289, 196608, 17, -458753, 196608, 17, -393217, 196608, 17, -327681, 196608, 17, -262145, 196608, 17, -196609, 196608, 17, -131073, 196608, 17, -65537, 196608, 17, -720896, 196608, 17, -655360, 196608, 17, -589824, 196608, 17, -524288, 196608, 17, -458752, 196608, 17, -393216, 196608, 17, -327680, 196608, 17, -262144, 196608, 17, -196608, 196608, 17, -131072, 196608, 17, -720895, 196608, 17, -655359, 196608, 17, -589823, 196608, 17, -524287, 196608, 17, -458751, 196608, 17, -393215, 196608, 17, -327679, 196608, 17, -262143, 196608, 17, -196607, 196608, 17, -131071, 196608, 17, -720894, 196608, 17, -655358, 196608, 17, -589822, 196608, 17, -524286, 196608, 17, -458750, 196608, 17, -393214, 196608, 17, -327678, 196608, 17, -262142, 196608, 17, -196606, 196608, 17, -131070, 196608, 17, -720893, 196608, 17, -655357, 196608, 17, -589821, 196608, 17, -524285, 196608, 17, -458749, 196608, 17, -393213, 196608, 17, -327677, 196608, 17, -262141, 196608, 17, -196605, 196608, 17, -131069, 196608, 17, -720892, 196608, 17, -655356, 196608, 17, -589820, 196608, 17, -524284, 196608, 17, -458748, 196608, 17, -393212, 196608, 17, -327676, 196608, 17, -262140, 196608, 17, -196604, 196608, 17, -131068, 196608, 17, -720891, 196608, 17, -655355, 196608, 17, -589819, 196608, 17, -524283, 196608, 17, -458747, 196608, 17, -393211, 196608, 17, -327675, 196608, 17, -262139, 196608, 17, -196603, 196608, 17, -131067, 196608, 17, -720890, 196608, 17, -655354, 196608, 17, -589818, 196608, 17, -524282, 196608, 17, -458746, 196608, 17, -393210, 196608, 17, -327674, 196608, 17, -262138, 196608, 17, -196602, 196608, 17, -131066, 196608, 17, -8, 196608, 11, -7, 196608, 11, -6, 196608, 11, -5, 196611, 1342177284, -4, 196611, 1342177284, -3, 196608, 11, -2, 196608, 11, -1, 196608, 11, -65536, 196608, 11, -65535, 196608, 11, -65534, 196608, 11, -65533, 196611, 1342177284, -65532, 196611, 1342177284, -65531, 196608, 11, -65530, 196608, 11, -65529, 196608, 11, -131065, 131072, 16, -65544, 0, 16, -655368, 65536, 16, -589832, 65536, 16, -524296, 65536, 16, -458760, 65536, 16, -393224, 65536, 16, -327688, 65536, 16, -262152, 65536, 16, -196616, 65536, 16, -131080, 65536, 16, -720889, 196608, 16, -655353, 196608, 16, -589817, 196608, 16, -524281, 196608, 16, -458745, 196608, 16, -393209, 196608, 16, -327673, 196608, 16, -262137, 196608, 16, -196601, 196608, 16, -720904, 0, 17, -786425, 65536, 17, -720903, 131072, 17, -720902, 131072, 17, -720901, 131072, 17, -720900, 131072, 17, -720899, 131072, 17, -720898, 131072, 17, -720897, 131072, 17, -786432, 131072, 17, -786431, 131072, 17, -786430, 131072, 17, -786429, 131072, 17, -786428, 131072, 17, -786427, 131072, 17, -786426, 131072, 17)

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="EnemyCounter" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyCounter"]
position = Vector2(0.5, -97.5)
shape = SubResource("RectangleShape2D_m7j4v")

[node name="RedRunePillar" parent="." instance=ExtResource("3_i6fd6")]
position = Vector2(0, -16)

[node name="SurviveTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="SurviveLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = -53.0
offset_top = -84.0
offset_right = 62.0
offset_bottom = -55.0
theme_override_colors/default_color = Color(1, 0.357326, 0.290208, 1)
theme_override_fonts/normal_font = ExtResource("4_jkq8k")
bbcode_enabled = true
text = "[wave] SURVIVE!"

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_tgguc")

[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
[connection signal="body_entered" from="EnemyCounter" to="." method="_on_enemy_counter_body_entered"]
[connection signal="body_exited" from="EnemyCounter" to="." method="_on_enemy_counter_body_exited"]
[connection signal="timeout" from="SurviveTimer" to="." method="_on_survive_timer_timeout"]
